2005-12-28  Hans Breuer  <hans@breuer.org>

	* app/interface.c(create_display_shell) : don't clip width on screen 
	height - now commited. Also lazy creation of tooltips.
	
	* objects/UML/actor.c : Actor is finally resizable, fixes bug #66915
	
2005-12-27  Hans Breuer  <hans@breuer.org>

	* app/diapsft2renderer.c(draw_bezier_outline) : only call
	FT_Outline_Decompose() when FT_GLYPH_FORMAT_OUTLINE.
	Prefers no text output over crashing for bug #144212

	* app/interface.c : removed superfluous call to dia_canvas_set_size().
	Suggested by Roland Stigge, fixes bug #148149.

	* plug-ins/dxf/dxf-import.c : don't complain too loud on Binary
	DXF. It is not supported at all. Fixes bug #322101

	* lib/geometry.c : removed the ifdefed GLIB_CHECK_VERSION(2,7,0)
	define G_IMPLEMENT_INLINES. It breaks again with glib-2-8


2005-12-27  Hans Breuer  <hans@breuer.org>

	* app/navigation.c : protect on_da_button_release_event() against being
	called twice. Also only popdown the navigation window after the first 
	draw (reusing nav->is_first_expose). Fixes bug #151696
	
	* app/interface.c(create_display_shell): don't clip width on screen height, 
	but height

	* lib/plug-ins.c : fixed typo in comment
	
	* lib/libdia.def : updated externals
	* lib/makefile.msc : build debug.obj

	* plug-ins/makefile.msc : building pgf in the right alphabetical order
	* plug-ins/pgf/render_pgf.c : include <glib/gprintf.h>
	
2005-12-08  Lars Clausen  <lars@raeder.dk>

	* app/authors.h: 
	* plug-ins/pgf/pgf.c: 
	* plug-ins/pgf/render_pgf.[ch]: 
	* plug-ins/pgf/Makefile.am: 
	* plug-ins/Makefile.msc: 
	* plug-ins/Makefile.am (SUBDIRS): 
	* configure.in: Patch from Moritz Kirmse <momomaniac@gmail.com>: Add
	support for PGF output for including in (La)TeX documents that
	allows PDF generation.

	* samples/render-test.dia: Added samples of text in different
	sizes, standard fonts and styles with size markers.

2005-12-04  Lars Clausen  <lars@raeder.dk>
